# RunnableAI

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: catalog.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ai/runnable/local/: MainActivity.kt  MainViewModel.kt  RunnableAIApp.kt
app/src/main/java/ai/runnable/local/audio/: AudioPlayer.kt
app/src/main/java/ai/runnable/local/backends/: BackendRegistry.kt
app/src/main/java/ai/runnable/local/backends/executorch/: ExecuTorchBackend.kt
app/src/main/java/ai/runnable/local/backends/llama/: LlamaBackend.kt  LlamaNative.kt
app/src/main/java/ai/runnable/local/backends/onnx/: OnnxBackend.kt
app/src/main/java/ai/runnable/local/data/: AppSettings.kt  DownloadAuthConfig.kt  HuggingFaceRepository.kt  ModelCatalog.kt  ModelCatalogRepository.kt  ModelDownloadManager.kt  ModelDownloadWorker.kt  ModelInstallRecord.kt  ModelManager.kt  ModelStatus.kt  ModelStore.kt  NetworkClient.kt
app/src/main/java/ai/runnable/local/domain/: ChatModels.kt  InferenceOrchestrator.kt  Results.kt
app/src/main/java/ai/runnable/local/domain/helpers/: AsrHelper.kt  ChatHelper.kt  ModelResolver.kt  TtsHelper.kt
app/src/main/java/ai/runnable/local/ui/: MainScreen.kt
app/src/main/java/ai/runnable/local/ui/components/: AppBottomBar.kt  AppTopBar.kt  (+16 more)
app/src/main/res/drawable/: ic_chat.xml  ic_voice.xml
app/src/main/res/values-night/: themes.xml
docker/: Dockerfile  build-apk.sh
scripts/: build-in-docker.sh
(+11 files in other folders)
